updated github and linkedin proflie links

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 ​
   <ul>
     <li><strong>Email:</strong> <a href="#">bgood524@gmail.com</a></li>
-    <li><strong>Github:</strong> <a href="https://github.com/Bgood524">Bgood524</a></li>
-    <li><strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/brigoodm/">Brian Goodman</a></li>
+    <li><strong>Github:</strong> <a href="https://github.com/Bgood524">Profile</a></li>
+    <li><strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/brigoodm/">Profile</a></li>
   </ul>
 ​
   <table>
